--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,19 @@ body {
 img {
     max-width: 100%;
   }
-  
+  .videoWrapper {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 */
+    height: 0;
+  }
+
+  .videoWrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 /* h1{
 	margin-bottom: .5rem;
 	font-family: inherit;
@@ -64,7 +76,7 @@ img {
 	font-color:white;
 	font-size: 2rem;
 	font-weight: 300;
-	
+
 }
 
 .lead
@@ -78,8 +90,8 @@ img {
 	background: #333333;
 
 	min-height: 700px;
-	/* width: 90%;
-	margin:auto; */
+	width: 90%;
+	margin:auto;
 }
 hr
 {
@@ -154,8 +166,7 @@ hr
 
 .bg-text {
   background-color: rgba(0,0,0, 0.3); /* Black w/opacity/see-through */
-
-  color: white;
+	color: white;
   position: relative;
   top: 350px;
   left: 50%;
@@ -167,7 +178,7 @@ hr
 	margin-top: 0px;
 	min-height: 400px;
 	padding:1rem;
-  padding-bottom:2rem; 
+  padding-bottom:2rem;
 }
 .carousel{
  margin:auto;
@@ -195,13 +206,12 @@ hr
 }
 .rstxt{
 	color:white;
-	font-weight: bold;
 	font-family:inherit;
 	position:relative;
 	text-align:left;
 	font-size:min(3.5vw,15px);
-	padding:5px;
-	vertical-align: baseline;
+	padding:3px;
+	vertical-align:inherit;
 
 }
 
@@ -222,6 +232,8 @@ hr
 
 	min-width: 250px;
 	min-height: 200px;
+	max-width: 1000px;
+	max-height: 650px;
 }
 
 /*Fixed background*/
@@ -312,11 +324,23 @@ hr
 
 }
 
-@media screen and (max-width:600px)
-{
-	table {
-    display: block;
-    overflow-x: auto;
-    white-space: nowrap;
+
+/*<---------------Some MOMENTS------------>*/
+#moments{
+  background-size: auto;
+  height:400px;
 }
+
+#moments-head{
+	color:white;
+	opacity:0.7;
+	margin: 1.5rem;
+	font-family: sans-serif ;
+	font-size:min(4vw,65px);
+}
+
+.m-caption{
+  position:relative;
+	float:left;
+	background-color: rgba(0,0,0, 0.5);
 }
